--- a/static/src/blocks/composite/main-header/main-header.pug
+++ b/static/src/blocks/composite/main-header/main-header.pug
@@ -3,10 +3,32 @@ mixin main-header()
         .main-header__left
             ul
                 li
-                    a(href="about").link О нашем агенстве
+                    a(href='about') О нашем агенстве
                 li
-                    button(type="button", data-link="popup-callback").link.link_dashed.popup-link Заказать обратный звонок
+                    a.popup-link.dashed(href='#', data-link='popup-callback')
+                        | Заказать
+                        | обратный звонок
                 li
-                    button(type="button", data-link="popup-mail").link.link_dashed.popup-link Написать нам
+                    a.popup-link.dashed(href='#', data-link='popup-mail') Написать нам
+            .main-header__search
+                .serach-form.ya-site-form.ya-site-form_inited_no(onclick="return {'action':'/search','arrow':false,'bg':'transparent','fontsize':12,'fg':'#000000','language':'ru','logo':'rb','publicname':'Поиск at-event','suggest':true,'target':'_self','tld':'ru','type':3,'usebigdictionary':true,'searchid':2205509,'webopt':false,'websearch':false,'input_fg':'#000000','input_bg':'#ffffff','input_fontStyle':'normal','input_fontWeight':'normal','input_placeholder':'Поиск','input_placeholderColor':'#cccccc','input_borderColor':'#ffffff'}")
+                    form(action='http://yandex.ru/sitesearch', method='get', target='_self')
+                        input(type='hidden', name='searchid', value='2205509')
+                        input(type='hidden', name='l10n', value='ru')
+                        input(type='hidden', name='reqenc', value='')
+                        input(type='search', name='text', value='')
+                    
         .main-header__center
+            a(href='/')
+                img(src='./img/logo-name-pink.png')
+            h5 Свадебное агенство
+            
         .main-header__right
+            h4
+                a.phone-link(href='tel:79823112892') +7 (982) 311-28-92
+            h6 г. Челябинск, ул. Бейвеля, 27
+            .main-header__socials.socials
+                a.socials__link.socials__link_vk(href='https://vk.com/at.event', target='_blank')
+                a.socials__link.socials__link_youtube(href='https://www.youtube.com/channel/UC676j7XaxvcC2cYz5Ghf6zA', target='_blank')
+                a.socials__link.socials__link_insta(href='https://instagram.com/at.event/', target='_blank')
+    
