--- a/static/src/css/variables.scss
+++ b/static/src/css/variables.scss
@@ -1,6 +1,7 @@
 //mediaqueries//mediaqueries
 $desktop-width: "1200px";
-$laptop-width: "992px";
+//$laptop-width: "992px";
+$laptop-width: "940px";
 $tablet-width: "768px";
 $mobile-width: "576px";
 
