--- a/static/src/pug/layouts/main.pug
+++ b/static/src/pug/layouts/main.pug
@@ -16,12 +16,12 @@ html(lang="ru")
     //+_table-of-contents()
     // //Список страниц
     +main-header()
+    +main-nav()
 
     main
       block content
     +main-footer()
 
-    include ../svg
     script(src="js/main.js")
 
 
